c/examples/writing-a-c-compiler-tests/tests/chapter_13/invalid_types/complement_double.c
int main(void) {
    /* You can't take the bitwise complement of a double */
    double d = ~10.0;
    return 0;
}